Temporary data service added.

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,2 +1,8 @@
-<div class="gantt-chart">
+<div class='gantt-chart'>
+<!--     <gantt-chart 
+        data='data'>
+    </gantt-chart> -->
+    <swimlane-chart 
+        data='data'>
+    </swimlane-chart>
 </div>
